Fix pagination last page not showing

--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -33,4 +33,7 @@
     border-radius: 4px;
     padding: 4px 10px 4px 15px;
   }
+  .navButton:disabled {
+    background-color: var(--light-gray);
+  }
 }
